Add tests and user by id  endpoint
