# docs/openapi.json
@@ -37,8 +37,23 @@
               }
             }
           },
-          "500": {
-            "description": "Internal server error."
+          "400": {
+            "description": "Bad request.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "enum": [
+                        "required"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       },
@@ -47,6 +62,23 @@
         "tags": [
           "Users"
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "The user's name.",
+                    "example": "Tomáš Kebrle"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "The created user.",
@@ -65,10 +97,81 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "name": "string"
-                  },
-                  "example": {
-                    "name": "name/required"
+                    "fieldErrors": {
+                      "type": "object",
+                      "properties": {
+                        "name": {
+                          "type": "array",
+                          "items": {
+                            "type": "string",
+                            "enum": [
+                              "required"
+                            ]
+                          }
+                        }
+                      },
+                      "example": {
+                        "name": [
+                          "required"
+                        ]
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "summary": "Returns a user by ID.",
+        "tags": [
+          "Users"
+        ],
+        "responses": {
+          "200": {
+            "description": "The user.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Id is not valid.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "enum": [
+                        "not-valid"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                      "type": "string",
+                      "enum": [
+                        "not-found"
+                      ]
+                    }
                   }
                 }
               }
@@ -99,6 +202,13 @@
           "name": "John Doe",
           "id": "f7cabd53-49e1-4c93-b59e-6035811b134d"
         }
+      },
+      "ErrorCodes": {
+        "type": "string",
+        "enum": [
+          "required",
+          "not-found"
+        ]
       }
     }
   },
