# src/routes/users.ts
@@ -2,6 +2,7 @@ import { db } from "../kysely.ts";
 import { z } from "https://deno.land/x/zod@v3.21.4/mod.ts";
 // @deno-types="npm:@types/express@4"
 import express from "npm:express@4.18.2";
+import { isValidUUID } from "../utils/isValidUUID.ts";
 
 const router = express.Router();
 
@@ -23,6 +24,11 @@ const router = express.Router();
  *    example:
  *      name: John Doe
  *      id: f7cabd53-49e1-4c93-b59e-6035811b134d
+ *   ErrorCodes:
+ *    type: string
+ *    enum:
+ *      - required
+ *      - not-found
  */
 
 /**
@@ -43,8 +49,17 @@ const router = express.Router();
  *            type: array
  *            items:
  *              $ref: '#/components/schemas/User'
- *    500:
- *      description: Internal server error.
+ *    400:
+ *     description: Bad request.
+ *     content:
+ *      application/json:
+ *        schema:
+ *         type: object
+ *         properties:
+ *          name:
+ *            type: string
+ *            enum:
+ *             - required
  */
 router.get("/users", async (_req, res) => {
   const users = await db.selectFrom("User").selectAll().execute();
@@ -52,7 +67,65 @@ router.get("/users", async (_req, res) => {
 });
 
 const userPostReqBodySchema = z.object({
-  name: z.string({ required_error: "name/required" }),
+  name: z.string({ required_error: "required" }),
+});
+
+/**
+ * @openapi
+ * /users/{id}:
+ *  get:
+ *   summary: Returns a user by ID.
+ *   tags: [Users]
+ *   responses:
+ *    200:
+ *      description: The user.
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/User'
+ *    400:
+ *      description: Id is not valid.
+ *      content:
+ *        application/json:
+ *          schema:
+ *            type: object
+ *            properties:
+ *              id:
+ *               type: string
+ *               enum:
+ *                - not-valid
+ *    404:
+ *      description: User not found
+ *      content:
+ *       application/json:
+ *        schema:
+ *          type: object
+ *          properties:
+ *            user:
+ *             type: string
+ *             enum:
+ *              - not-found
+ */
+router.get("/users/:id", async (req, res) => {
+  const id = req.params.id;
+
+  if (!isValidUUID(id)) {
+    res.status(400).json({ id: "not-valid" });
+    return;
+  }
+
+  const user = await db
+    .selectFrom("User")
+    .selectAll()
+    .where("id", "=", id)
+    .executeTakeFirst();
+
+  if (!user) {
+    res.status(404).json({ user: "not-found" });
+    return;
+  }
+
+  res.json(user);
 });
 
 /**
@@ -61,6 +134,17 @@ const userPostReqBodySchema = z.object({
  *  post:
  *   summary: Creates a new user.
  *   tags: [Users]
+ *   requestBody:
+ *    required: true
+ *    content:
+ *      application/json:
+ *       schema:
+ *        type: object
+ *        properties:
+ *          name:
+ *            type: string
+ *            description: The user's name.
+ *            example: Tomáš Kebrle
  *   responses:
  *    200:
  *      description: The created user.
@@ -75,9 +159,16 @@ const userPostReqBodySchema = z.object({
  *       schema:
  *        type: object
  *        properties:
- *          name: string
- *        example:
- *          name: name/required
+ *          fieldErrors:
+ *            type: object
+ *            properties:
+ *              name:
+ *                type: array
+ *                items:
+ *                  type: string
+ *                  enum: [required]
+ *            example:
+ *              name: [required]
  */
 router.post("/users", async (req, res) => {
   const result = userPostReqBodySchema.safeParse(req.body);
@@ -86,10 +177,14 @@ router.post("/users", async (req, res) => {
     res.status(400).json(result.error.flatten());
     return;
   }
-  const user = await db
+
+  const [user] = await db
     .insertInto("User")
-    .values({ name: result.data.name })
-    .executeTakeFirstOrThrow();
+    .values({
+      name: result.data.name,
+    })
+    .returning(["id", "name"])
+    .execute();
 
   res.json(user);
 });
